corrigido usuario e categorias, faltando corrigir o erro de linkagem pelo spring security